Fix FAQ screen being too large to close
This switches the FAQ screen to using `display:flex`.
Furthermore, all modals have a `max-height` of `90vh`.

--- a/css/spni.css
+++ b/css/spni.css
@@ -299,7 +299,7 @@ body.modal-open {
 	width: 100vw;
 	height: 75vw;
 	max-width: 133.33vh;
-	max-height: 100vh;
+	max-height: 90vh;
 	top: 0;
 	bottom: 0;
 	left: 0;
@@ -327,6 +327,11 @@ body.modal-open {
 	height: 100%;
 	display: table-cell;
 	vertical-align: middle;
+}
+
+.modal-flex-container {
+    width: 100%;
+	height: 100%;
 }
 
 .table-modal .modal-dialog {
@@ -362,6 +367,20 @@ body.modal-open {
 	background-color: #777777;
 	box-sizing: border-box;
     font-size: 100%;
+}
+
+.modal-flex-container .modal-dialog-surface, .modal-flex-container .modal-dialog {
+    height: 100%;
+}
+
+.modal-flex-container .modal-content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.modal-flex-container .modal-footer {
+    margin-top: auto;
 }
 
 .table-modal .modal-content {
@@ -659,12 +678,6 @@ body.modal-open {
 
 #help-modal .modal-body {
     overflow-y: auto;
-    max-height: 55vh;
-    padding-top: 0px;
-}
-
-#help-modal .modal-header {
-    padding-bottom: 0px;
 }
 
 .help-page h2 {
